--- a/escom-bpm-web/src/main/webapp/view/templ/expl/expl-table.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/templ/expl/expl-table.xhtml
@@ -2,9 +2,10 @@
                 xmlns:ui="http://java.sun.com/jsf/facelets"
                 xmlns:f="http://java.sun.com/jsf/core"    
                 xmlns:h="http://java.sun.com/jsf/html" 
+                xmlns:pe="http://primefaces.org/ui/extensions"
                 xmlns:p="http://primefaces.org/ui">
    
-    <p:dataTable id="tblDetail" value="#{_explorerBean.detailItems}" var="item"
+    <p:dataTable id="tblDetail" value="#{_explorerBean.detailItems}" var="item" 
                  emptyMessage="#{bundle.EmptyTable}"
                  paginator="true" paginatorPosition="bottom" first="#{_explorerBean.currentPage}"
                  paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
@@ -146,6 +147,9 @@
             </p:splitButton>
         </p:column>
     </p:dataTable>        
-
+    <pe:tooltip for="tblDetail" value="#{_explorerBean.tableToolTip}" rendered="#{!empty(_explorerBean.tableToolTip)}"
+                mouseTracking="true" myPosition="top left" adjustX="10" adjustY="10"                 
+                styleClass="qtip qtip-rounded qtip-shadow" header="#{bundle.Info}"/>
+    
     <ui:include src="/view/common/confirm-dlg.xhtml"/>
 </ui:composition>
