--- a/escom-bpm-web/src/main/webapp/view/processes/elements/doc-status-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/processes/elements/doc-status-card.xhtml
@@ -20,17 +20,22 @@
         <p:tabView orientation="left" id="mainTabView" styleClass="ui-grid-col-12 col-padding"  >
             <p:tab title="#{bundle.Status}"  >
                 <p:panelGrid columns="1" columnClasses="ui-grid-col-12 col-padding" styleClass="ui-grid-col-12 without-spaces" >
-                    <p:outputLabel value="#{bundle.Status}:" indicateRequired="true"/>
-                    <p:selectOneMenu value="#{docStatusCardBean.selected}" converter="statusesDocConvertor"                           
-                           styleClass="ui-grid-col-12"
-                           required="#{param['isRequired'] == 'true'}" 
-                           requiredMessage="#{bundle.Field} [#{bundle.Status}] #{bundle.MustBeFilled}">
+                    <p:outputLabel value="#{bundle.ChangeDocumentStateTo}:" />
+                    <p:selectOneMenu value="#{docStatusCardBean.selectedState}" converter="stateConvertor"
+                           styleClass="ui-grid-col-12">
+                        <f:selectItems value="#{stateBean.findAll()}" var="state" itemLabel="#{docStatusCardBean.getLabelFromBundle(state.name)}" itemValue="#{state}" />
+                        <f:selectItem itemValue="#{null}" itemLabel="#{bundle.EmptySelData}"/>
+                    </p:selectOneMenu>
+                    
+                    <p:outputLabel value="#{bundle.AddDocumentStatus}:" />
+                    <p:selectOneMenu value="#{docStatusCardBean.selected}" converter="statusesDocConvertor"
+                           styleClass="ui-grid-col-12">
                         <f:selectItems value="#{statusesDocBean.findAll()}" var="status" itemLabel="#{docStatusCardBean.getLabelFromBundle(status.bundleName)}" itemValue="#{status}" />
                         <f:selectItem itemValue="#{null}" itemLabel="#{bundle.EmptySelData}"/>
                     </p:selectOneMenu>
                     
                     <p:outputLabel value="#{bundle.Color}:" />
-                    <p:selectOneMenu value="#{docStatusCardBean.style}"
+                    <p:selectOneMenu value="#{docStatusCardBean.style}" title="#{bundle.ColorSchemeOn}"
                                      required="#{param['isRequired'] == 'true'}" 
                                      requiredMessage="#{bundle.Field} [#{bundle.Status}] #{bundle.MustBeFilled}">
                         <f:selectItem itemValue="success" itemLabel="#{bundle.Green}"/>
