--- a/escom-bpm-web/src/main/webapp/view/templ/expl/expl-southpane.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/templ/expl/expl-southpane.xhtml
@@ -7,7 +7,7 @@
     
     <pe:layoutPane id="south" position="south" >
         <h:form style="font-size: 85%;" id="explorer_south">
-            <h:panelGrid columns="3" columnClasses="ui-grid-col-4 without-spaces, ui-grid-col-4 without-spaces, ui-grid-col-4 without-spaces" styleClass="ui-grid-col-12 without-spaces">
+            <h:panelGrid columns="2" columnClasses="ui-grid-col-6 without-spaces, ui-grid-col-6 without-spaces" styleClass="ui-grid-col-12 without-spaces">
                 <h:panelGroup>
                     <p:commandButton value="#{bundle.GotoIndex}" icon="ui-icon-circle-arrow-w"
                                      id="btnCancel" ajax="false"
@@ -23,12 +23,12 @@
                     </p:commandButton>
                 </h:panelGroup>
 
-                <p:outputLabel value="#{''.concat(sessionBean.getCurrentUserPost().name).concat(' ').concat(sessionBean.currentUser.shortFIO)}" />
-                
                 <h:panelGroup styleClass="pull-right" style="padding-top: 0px;">
-                    <p:clock mode="server" id="serverTime" pattern="dd.MM.yy HH:mm:ss">
-                    </p:clock>
-                    <pe:tooltip for="serverTime" value="#{bundle.ServerTime}"/>
+                    <p:outputLabel value="#{''.concat(sessionBean.getCurrentUserPost().name).concat(' ').concat(sessionBean.currentUser.shortFIO)}" />                
+                    <p:spacer width="7" />
+                    <p:clock mode="server" id="serverTime" pattern="dd.MM.yy HH:mm:ss"/>                    
+                    <pe:tooltip for="serverTime" value="#{bundle.ServerTime}" myPosition="top left" adjustX="10" adjustY="10" 
+                                styleClass="qtip qtip-rounded qtip-shadow" header="#{bundle.Info}"/>
                     <p:spacer width="7" />
                     <p:commandButton value="#{bundle.Exit}" title="#{bundle.ExitProgramm}" 
                              rendered="#{_explorerBean.explorerViewMode}"
