--- a/escom-bpm-web/src/main/webapp/view/templ/templ.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/templ/templ.xhtml
@@ -4,6 +4,7 @@
         xmlns:ui="http://java.sun.com/jsf/facelets"
         xmlns:h="http://xmlns.jcp.org/jsf/html"                
         xmlns:p="http://primefaces.org/ui"
+        xmlns:pe="http://primefaces.org/ui/extensions" 
         xmlns:f="http://xmlns.jcp.org/jsf/core">
 
     <h:head>
@@ -58,8 +59,8 @@
                 day: 'День',
                 allDayText: 'Весь день'
             };
-        </script>
-        
+        </script>       
+                
         <ui:insert name="customStyleCSS"/>
         <ui:insert name="customJavaScript"/>
         
