--- a/escom-bpm-web/src/main/webapp/view/templ/tree/tree.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/templ/tree/tree.xhtml
@@ -44,18 +44,18 @@
                 update="centerFRM centerHeaderLabel #{_updates}"
                 oncomplete="initDND()"/>
 
-        <p:tab id="tabTree" title="#{bundle.Groups}" rendered="#{_treeBean != null}">
+        <p:tab id="tabTree" title="#{_lbGroupName}" rendered="#{_treeBean != null}">
             <ui:include src="/view/templ/tree/tree-toolbar.xhtml"/>
 
             <p:tree id="tree" value="#{_explorerBean.tree}" var="treeItem"  
                     selectionMode="single" animate="true" 
                     selection="#{_explorerBean.treeSelectedNode}" style="width: auto; overflow-y: auto;">
 
-                <p:treeNode type="#{_explorerBean.typeRoot}" icon="#{treeItem.iconTree}">
+                <p:treeNode type="#{_explorerBean.typeRoot}" icon="#{treeItem.iconTree}" >
                     <h:outputText value="#{treeItem.getNameEndElipse()}" title="#{treeItem.name}"/>
                 </p:treeNode>
                 
-                <p:treeNode type="tree" expandedIcon="ui-icon-folder-open" collapsedIcon="ui-icon-folder-collapsed">
+                <p:treeNode type="tree" expandedIcon="ui-icon-folder-open" collapsedIcon="ui-icon-folder-collapsed" styleClass="dragable">
                     <h:outputText value="#{treeItem.getNameEndElipse()}" title="#{treeItem.name}"/>
                 </p:treeNode>
 
@@ -108,6 +108,8 @@
             <ui:include src="/view/templ/tree/tree-filters.xhtml" />
         </p:tab>
 
+        <ui:insert name="treeTabs" />
+        
     </p:accordionPanel>
 
 </ui:composition>
