--- a/escom-bpm-web/src/main/webapp/view/common/file-uppload.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/common/file-uppload.xhtml
@@ -10,7 +10,7 @@
                       rendered="#{!_explorerBean.isTrashSelected()}"
                       styleClass="ui-grid-col-12"
                       allowTypes="#{applicationBean.ALLOW_FILE_TYPES}"
-                      sizeLimit="#{docsBean.maxFileSize}"
+                      sizeLimit="#{docBean.maxFileSize}"
                       invalidFileMessage = "#{bundle.INVALID_FILE_TYPE}"
                       invalidSizeMessage = "#{bundle.INVALID_FILE_SIZE}"
                       fileLimitMessage   = "#{bundle.INVALID_FILE_COUNT}"
