--- a/escom-bpm-web/src/main/webapp/view/docs/attaches/add-attache.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/attaches/add-attache.xhtml
@@ -60,7 +60,7 @@
 
                         <p:fileUpload id="file" disabled="#{addAttacheBean.doc == null}"
                                       allowTypes="#{applicationBean.ALLOW_FILE_TYPES}"
-                                      sizeLimit="#{docsBean.maxFileSize}"
+                                      sizeLimit="#{docBean.maxFileSize}"
                                       invalidFileMessage = "#{bundle.INVALID_FILE_TYPE}"
                                       invalidSizeMessage = "#{bundle.INVALID_FILE_SIZE}"
                                       fileLimitMessage   = "#{bundle.INVALID_FILE_COUNT}"
