--- a/escom-bpm-web/src/main/webapp/view/docs/document.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/document.xhtml
@@ -14,8 +14,8 @@
     
     <ui:define name="preRendered">
         <f:metadata>
-            <f:viewParam name="itemId" value="#{docsBean.documentId}" />
-            <f:event listener="#{docsBean.onDownLoadAttachePDFByExtLink()}" type="preRenderView" />
+            <f:viewParam name="itemId" value="#{docBean.documentId}" />
+            <f:event listener="#{docBean.onDownLoadAttachePDFByExtLink()}" type="preRenderView" />
         </f:metadata>  
     </ui:define>
     
