--- a/escom-bpm-web/src/main/webapp/view/index.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/index.xhtml
@@ -184,7 +184,7 @@
                             <p:fileUpload id="file" style="font-size: small;"
                                             styleClass="ui-grid-col-12"
                                             allowTypes="#{applicationBean.ALLOW_FILE_TYPES}"
-                                            sizeLimit="#{docsBean.maxFileSize}"
+                                            sizeLimit="#{docBean.maxFileSize}"
                                             invalidFileMessage = "#{bundle.INVALID_FILE_TYPE}"
                                             invalidSizeMessage = "#{bundle.INVALID_FILE_SIZE}"
                                             fileLimitMessage   = "#{bundle.INVALID_FILE_COUNT}"
@@ -256,7 +256,7 @@
                             <p:fileUpload id="fileDoc" style="font-size: small;"                                       
                                         styleClass="ui-grid-col-12"
                                         allowTypes="#{applicationBean.ALLOW_FILE_TYPES}"
-                                        sizeLimit="#{docsBean.maxFileSize}"
+                                        sizeLimit="#{docBean.maxFileSize}"
                                         invalidFileMessage = "#{bundle.INVALID_FILE_TYPE}"
                                         invalidSizeMessage = "#{bundle.INVALID_FILE_SIZE}"
                                         fileLimitMessage   = "#{bundle.INVALID_FILE_COUNT}"
